<resources>
    <string name="app_name">Chrono</string>
    <string name="chrono">Chrono</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="log_into">Log into</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in_small">log in</string>
    <string name="your_activity">Your activity</string>
    <string name="insights">Insights</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="default_blank_time">00:00:00</string>
    <string name="add">add</string>
    <string name="tasks">Tasks</string>
    <string name="categories">Categories</string>
    <string name="select_client">Select Client</string>
    <string name="new_task">New Task</string>
    <string name="add_client">Add Client</string>
    <string name="select_category">Select Category</string>
    <string name="add_category">Add Category</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="start_time">Start Time</string>
    <string name="create">Create</string>
    <string name="clear_image">Clear Image</string>
    <string name="end_time">End Time</string>
    <string name="task_image">Task Image</string>
    <string name="date_placeholder">April 20, 2023</string>
    <string name="times_placeholder">09:00 – 10:23</string>
    <string name="duration_placeholder">01:23:00</string>
    <string name="image_hint">Click to expand</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="daily_goal_placeholder_title">Daily Goal: April 10, 2023</string>
    <string name="not_set">Not Set</string>
    <string name="min_goal">Min Goal</string>
    <string name="max_goal">Max Goal</string>
    <string name="your_time_today_00_00_00">Your time today - 00:00:00</string>
    <string name="research_and_planning">Research and Planning</string>
    <string name="client">Client</string>
    <string name="xyz_management">XYZ Management</string>
    <string name="category">Category</string>
    <string name="manage_pro_system">Manage Pro System</string>
    <string name="chrono_time_tracking_app">Chrono - Time Tracking App</string>
    <string name="_2_11_23">2:11:23</string>
    <string name="researching_and_planning">Researching and planning</string>
    <string name="_1_23_11">1:23:11</string>
    <string name="chrono_timesheet_app">Chrono - Timesheet App</string>
    <string name="april_20_2023">April 20, 2023</string>
</resources>