<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytItemTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/grey_border"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/tvItemTaskDescription"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@string/researching_and_planning"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemTaskDate" />

        <TextView
            android:id="@+id/tvItemTaskDuration"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/_1_23_11"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvItemTaskCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvItemTaskDescription" />

        <TextView
            android:id="@+id/tvItemTaskClient"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/chrono"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemTaskCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemTaskDescription" />

        <TextView
            android:id="@+id/tvItemTaskCategory"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/chrono_timesheet_app"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemTaskDescription" />

        <TextView
            android:id="@+id/tvItemTaskDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/april_20_2023"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


