<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <LinearLayout
            android:id="@+id/lytNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYourActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/active_nav_button"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/your_activity"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGotoInsights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/inactive_nav_button"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/insights"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lytFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inactive_nav_button"
            app:layout_constraintTop_toBottomOf="@+id/lytNav">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartDate"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/filter_options_bg"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawableTint="@color/font_grey"
                android:paddingHorizontal="10dp"
                android:text="@string/start_date"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/btnEndDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lytFilter" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEndDate"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/filter_options_bg"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawableTint="@color/font_grey"
                android:paddingHorizontal="10dp"
                android:text="@string/end_date"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnStartDate"
                app:layout_constraintTop_toTopOf="@+id/lytFilter" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClearFilter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/filter_options_bg"
                android:drawableStart="@drawable/baseline_cancel_24"
                android:drawableTint="@color/red_dull"
                android:paddingHorizontal="10dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnApplyFilter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnStartDate" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApplyFilter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/filter_options_bg"
                android:drawableStart="@drawable/baseline_check_circle_24"
                android:drawableTint="@color/green_border"
                android:paddingHorizontal="10dp"
                android:text="@string/apply"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnClearFilter"
                app:layout_constraintTop_toBottomOf="@+id/btnStartDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/categories"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytFilter" />

        <TextView
            android:id="@+id/tvTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/tasks"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/rvTasks"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGotoTaskEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/active_button"
            android:drawableEnd="@drawable/baseline_add_circle_24"
            android:drawableTint="@color/white"
            android:paddingHorizontal="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTasks"
            app:layout_constraintStart_toEndOf="@+id/tvTasks"
            app:layout_constraintTop_toTopOf="@+id/tvTasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvCategories"
            tools:itemCount="1"
            tools:listitem="@layout/item_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="210dp"
            android:maxWidth="500dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/lytFilter"
            tools:itemCount="3"
            tools:listitem="@layout/item_task" />

        <TextView
            android:id="@+id/tvFilterTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@string/default_blank_time"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnGotoTaskEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnGotoTaskEntry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>